# poc_rdev_rust

./: Cargo.toml
poc/create-tauri-app-command/: README.md  index2.html  nav.html  package.json
poc/create-tauri-app-command/src/: App.jsx  BasePage.jsx  SplashScreen.jsx  main.jsx
poc/create-tauri-app-command/src-tauri/: Cargo.toml  tauri.conf.json
poc/create-tauri-app-command/src-tauri/src/: main-simple-socket.rs  main.rs
poc/create-tauri-app-command/src/Components/: commons.js
poc/create-tauri-app-command/src/Dashboard/: Dashboard.jsx
poc/create-tauri-app-command/src/Nav/: Nav.jsx  findNavWinByLabel.js  hideWin.js
poc/create-tauri-app-command/src/state/: socketState.js
poc/rdev_poc/: .gitignore  Cargo.toml
poc/rdev_poc/shell/: _kl.sh
poc/rdev_poc/src/: listen_global_keys.rs  main.rs  main_paste_and_key_press_simulate.rs
poc/rdev_ws/: Cargo.toml
poc/rdev_ws/shell/: .gitignore  _kl.sh  cd-kl.sh
poc/rdev_ws/src/: main.rs
poc/tri-app/: package.json
poc/tri-app-rust/src-tauri/: Cargo.toml  tauri.conf.json
poc/tri-app/src-tauri/: Cargo.toml  tauri.conf.json
shell/: .gitignore  _kl.sh  _prr.sh  rskb-ax-all  rskb-ax-dir  rskb-cd  rskb-run  run.sh
src/: main.rs  main.rs_2
