[package]
name = "terasoft-notebull"
version = "0.1.0"
edition = "2018"

#[[bin]]
#name = "main"
#path = "src/main.rs"
#
#[[bin]]
#name = "keys"
#path = "src/listen_global_keys.rs"

[dependencies]
rdev = "0.5.2"
enigo = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.31.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.28"

