[package]
name = "terasoft-notebull"
version = "0.1.0"
edition = "2018"

#[[bin]]
#name = "main"
#path = "src/main.rs"
#
#[[bin]]
#name = "keys"
#path = "src/listen_global_keys.rs"

[dependencies]
chrono = "0.4.26"
rdev = "0.5.2"
serde = { version = "1.0.185",  features = ["derive"] }
serde_derive = "1.0.185"
serde_json = "1.0.105"
simple-websockets = "0.1.6"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
